connects to heroku rest api and gets  db items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RetrofitIntro</string>
+    <string name="welcome_message">Hello Rahul. Modify your Macro goals and choose recipes you would like to plan around</string>
 </resources>
